--- a/src/Components/NoteGroupList/styles.css
+++ b/src/Components/NoteGroupList/styles.css
@@ -7,7 +7,10 @@
 
 .note-item {
   padding: 1rem;
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
+  margin-left: 2rem;
 }
 .border {
   border-radius: 1.5rem 0 0 1.5rem;
