--- a/src/Pages/styles.css
+++ b/src/Pages/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 .page1-container {
@@ -23,13 +24,15 @@
 .left-container {
   height: 100vh;
   width: 25vw;
-  transition: width 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .header {
-  text-align: left;
-  margin: 0.5rem;
-  padding: 0.5rem;
+  display: flex;
+  justify-content: flex-start;
+  padding: 1rem;
   font-size: 2rem;
   height: 10vh;
   font-weight: 500;
@@ -41,10 +44,11 @@
 }
 
 .create-button {
+  margin-top: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 0.8rem;
   width: 80%;
   padding: 0.5rem;
   border-radius: 1rem;
@@ -54,99 +58,21 @@
   cursor: pointer;
 }
 
-.notesTitle-list {
-  margin-top: 1rem;
-  cursor: pointer;
-}
-
-.note-item {
-  padding: 1rem;
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 2rem;
-  align-items: center;
-}
-
-.note-color-circle {
-  width: 2.2rem;
-  height: 2.2rem;
-  border-radius: 50%;
-  margin-right: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1rem;
-  font-weight: bold;
-  color: #fff;
-  text-align: center;
-}
-
-.note-name {
-  font-size: 1.2rem;
-  font-weight: 500;
-}
-
 .right-container {
   height: 100vh;
   width: 75vw;
   background-color: #f7ecdc;
-  transition: width 0.3s ease;
 }
-
-.right-header {
-  height: 10vh;
-  background-color: #e8e8e8;
-  margin-left: 0;
-}
-
-.right-content {
+.right-default-page {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  height: 60vh;
-  margin-top: 2rem;
-  font-size: 1rem;
-  overflow-y: auto;
-}
-
-.right-content-data {
-  display: flex;
-  margin-bottom: 1.2rem;
-  padding: 0.5rem;
-}
-
-.note-info {
-  display: flex;
-  flex-direction: column;
-  margin-right: 3rem;
-}
-
-.note-date,
-.note-time {
-  margin-bottom: 0.5rem;
-  font-weight: 400;
-}
-
-.note-data {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  text-align: left;
-  font-weight: 500;
-}
-
-.right-footer {
-  height: 30vh;
-  background-color: #e8e8e8;
-  position: relative;
-  padding: 0.5rem;
+  justify-content: center;
 }
 
 .image-placeholder {
-  margin-top: 4rem;
-  width: 50%;
-  height: 50%;
-  max-width: 100%;
-  max-height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .description {
@@ -169,8 +95,8 @@
   }
   .back-button {
     display: block;
-    margin: 1rem;
-    padding: 0.5rem 1rem;
+
+    padding: 0.5rem 1rem 0.5rem 0rem;
     background-color: #e8e8e8;
     border: none;
 
