--- a/src/Components/NoteDetails/styles.css
+++ b/src/Components/NoteDetails/styles.css
@@ -11,15 +11,16 @@
 .right-content {
   display: flex;
   flex-direction: column;
-  height: 65vh;
-  margin-top: 1rem;
+  height: 60vh;
   font-size: 1rem;
   overflow-y: auto;
+
   /* Add scrollbar when content exceeds container height */
 }
 .right-content-data {
   display: flex;
-  margin-bottom: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   margin-left: 1rem;
   padding: 0.5rem;
 }
@@ -44,26 +45,26 @@
 }
 
 .right-footer {
-  height: 25vh;
+  height: 30vh;
   background-color: #e8e8e8;
   position: relative;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
 }
 
 .text-area {
   width: 100%;
-  margin: 0 1rem;
-  height: 20vh;
+  margin: 1rem;
+  height: 80%;
   padding: 0.5rem;
   border: none;
   resize: none;
 }
 .right-arrow {
+  width: 10%;
   position: absolute; /* Set position to absolute */
-  bottom: 25px; /* Adjust the distance from the bottom as needed */
-  right: 30px; /* Adjust the distance from the right as needed */
+  bottom: 35px; /* Adjust the distance from the bottom as needed */
+  right: 2px; /* Adjust the distance from the right as needed */
 }
 
 .note-color-circle {
@@ -78,4 +79,24 @@
   font-weight: bold;
   color: #fff;
   text-align: center;
+}
+@media (max-width: 768px) {
+  .right-content-data {
+    margin-left: 0.3rem;
+  }
+
+  .note-data {
+    margin-right: 2rem;
+    width: 70%;
+  }
+
+  .text-area {
+    margin-top: 1.5rem;
+    height: 80%;
+    width: 100%;
+  }
+  .right-arrow {
+    bottom: 40px;
+    right: 25px;
+  }
 }
