--- a/src/Components/CreateNoteGroupForm/styles.css
+++ b/src/Components/CreateNoteGroupForm/styles.css
@@ -2,14 +2,14 @@
   position: fixed;
   bottom: 250px;
   right: 380px;
-  padding: 1.2rem;
+
   background-color: #f0f0f0;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 100;
   display: none;
-  height: 40vh;
-  width: 35vw;
+  height: 35vh;
+  width: 45vw;
 }
 
 .form-container.visible {
@@ -21,24 +21,25 @@
 .form-header {
   font-size: 1.2rem;
   font-weight: 500;
+  margin-left: 2rem;
   display: flex;
   justify-content: flex-start;
 }
 .form-content {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 .form-group {
   display: flex;
   align-items: center;
+  margin: 0rem 1rem;
 }
 
 .form-label {
   font-size: 1.2rem;
   font-weight: 500;
   width: 30%;
-  margin-right: 0.2rem;
 }
 
 .form-input {
@@ -46,16 +47,15 @@
   border-radius: 1rem;
   border: 1px solid #ccc;
   font-size: 1rem;
-  width: 70%;
-  margin-left: 2rem;
+  width: 65%;
 }
 
 .color-options {
   display: flex;
-  gap: 0.8rem;
-  width: 60%;
-  justify-content: flex-start;
   margin-left: 2rem;
+  gap: 0.8rem;
+  width: 65%;
+  justify-content: flex-start;
 }
 
 .color-circle {
@@ -68,6 +68,7 @@
 .form-submit-button {
   display: flex;
   justify-content: flex-end;
+  margin-right: 1rem;
 }
 .form-submit-button button {
   width: 30%;
@@ -82,41 +83,49 @@
 }
 @media screen and (max-width: 768px) {
   .form-container {
-    left: 25px;
-    bottom: 300px;
+    left: 10vw;
+    top: 80vw;
     width: 80vw;
-    height: 30vh;
+    height: 22vh;
   }
-  .form-header {
-    margin-bottom: 0.5rem;
-  }
-  .form-content {
-    gap: 1rem;
-  }
+
   .form-header {
     font-size: 1rem;
+    margin-left: 1rem;
+  }
+
+  .form-content {
+    gap: 0.8rem;
+  }
+
+  .form-group {
+    margin: 0rem 0.2rem;
   }
 
   .form-label {
-    font-size: 1rem;
-    width: 30%;
+    font-size: 0.9rem;
+    width: 40%;
   }
 
   .form-input {
+    padding: 0.5rem 0.8rem;
+    width: 55%;
     font-size: 0.8rem;
-    width: 70%;
+  }
+
+  .color-options {
+    margin-left: 0.5rem;
+    width: 55%;
+    gap: 0.3rem;
   }
 
   .form-submit-button {
-    font-size: 1rem;
+    margin-right: 0.6rem;
   }
-  .color-options {
-    gap: 0.4rem;
-  }
-  .form-submit-button {
-    justify-content: center;
-  }
+
   .form-submit-button button {
-    width: 70%;
+    width: 45%;
+    padding: 0.2rem;
+    font-size: 0.9rem;
   }
 }
